--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AdBidDemo</string>
+    <string name="app_name">AdbidMaxDemo</string>
 
     <string name="adbid_sdk_demo">Taku Sdk Demo</string>
 
